--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,58 @@
 $bgColor: rgb(80, 119, 25);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+.header{
+    &__container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__logo{
+        height: 118px;
+        padding-left: 40px;
+    }
+
+    &__links{
+        display: flex;
+        padding-right: 40px;
+        &__item {
+            list-style: none;
+            padding-left: 20px;
+            a{
+                text-decoration: none;
+                color: #fff;
+            }
+        }
+    }
+}
+
+.hero{
+    &__logo {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img{
+            max-width: 100vw;
+            width: 50%;
+            margin:100px auto;
+        }
+    }
+}
+
+.trailers {
+    max-width: 10140;
+}
 
 body {
-    background-color: $bgColor; 
+    background-image: url(../images/fundov3.jpg); 
+    background-attachment: fixed;
+    background-size: cover;
+
 } 
