--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,71 +1,55 @@
-$bgColor: rgb(80, 119, 25);
+@use 'hero';
+@use 'header';
+@use 'trailers';
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-
-.header{
-    &__container{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    &__logo{
-        height: 118px;
-        padding-left: 40px;
-    }
-
-    &__links{
-        display: flex;
-        padding-right: 40px;
-        &__item {
-            list-style: none;
-            padding-left: 20px;
-            a{
-                text-decoration: none;
-                color: #fff;
-            }
-        }
-    }
+@mixin text($fontsize:20px) {
+    font-size: $fontsize;
+    color: #fff;
+    font-weight: normal;
 }
 
-.hero{
-    &__logo {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        img{
-            max-width: 100vw;
-            width: 50%;
-            margin:100px auto;
-        }
-    }
+.text--giant {
+    @include text(28px);
 }
 
-.trailers {
+.text--big {
+    @include text(24px);
+}
+
+.text {
+    @include text;
+}
+
+.text--small {
+    @include text(18px)
+}
+
+.title {
+    padding-top: 80px;
+    padding-bottom: 24px;
+    text-transform: uppercase;
+}
+
+.content {
+    background-color: #000;
+    border-radius: 80px 80px 0 0;
+}
+
+section {
     max-width: 1140px;
     margin: auto;
-
-    &__videos {
-        display: flex;
-
-        &__meio {
-            margin: 0 12px;
-        }
-    }
-
-    &__sinopse {
-        text-align: center;
-    }
+    padding: 0 40px;
 }
 
 body {
     background-image: url(../images/outros/back.jpg); 
     background-attachment: fixed;
     background-size: cover;
-
 } 
