--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,13 +1,38 @@
 .header{
+    position: fixed;
+    width: 100%;
+    background-color: #000;
+    transition: background-color 1s ease;
+
+    &--is-hidden{
+        background-color: transparent;
+        transition: background-color 1s ease;
+        
+        .header__logo {
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 1s ease;
+        }
+
+    }
+
     &__container{
         display: flex;
         justify-content: space-between;
         align-items: center;
+
     }
 
     &__logo{
         height: 118px;
         padding-left: 40px;
+        transition: opacity 1s ease;
+
+        // &--is-hidden{
+        //     opacity: 0;
+        //     visibility: hidden;
+        //     transition: opacity 1s ease;
+        // }
     }
 
     &__links{
@@ -19,7 +44,7 @@
             a{
                 text-decoration: none;
                 color: #fff;
-            }
+            } 
         }
     }
 }
