--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -10,6 +10,12 @@
             width: 50%;
             margin-top: 20vh;
             margin-bottom: 30vh;
+
+            @media (max-width: 768px) {
+                width: 80%;
+                margin-top: 30vh;
+                margin-bottom: 40vh;
+            }
         }
     }
 }
