--- a/src/styles/_trailers.scss
+++ b/src/styles/_trailers.scss
@@ -3,14 +3,29 @@
     &__videos {
         display: flex;
 
-        &__meio {
-            margin: 0 12px;
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     }
+
+    &__meio {
+        margin: 0 12px;
+
+        @media (max-width: 768px){
+           margin:24px auto;
+        }
+    }
+
 
     &__sinopse {
         text-align: center;
         max-width: 960px;
         margin: auto;
+
+        @media (max-width: 768px){
+            margin-top: -40px;
+        }
     }
 }
