--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,18 +19,34 @@
 
 .text--giant {
     @include text(28px);
+
+    @media (max-width: 768px) {
+        @include text(20px);
+    }
 }
 
 .text--big {
     @include text(24px);
+
+    @media (max-width: 768px) {
+        @include text(18px);
+    }
 }
 
 .text {
     @include text;
+
+    @media (max-width: 768px) {
+        @include text(16px);
+    }
 }
 
 .text--small {
-    @include text(18px)
+    @include text(18px);
+
+    @media (max-width: 768px) {
+        @include text(14px);
+    }
 }
 
 .title {
@@ -60,5 +76,6 @@ footer {
     display: flex;
     background-color: #000;
     justify-content: center;
+    align-items: center;
     padding: 80px;
 }
