--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,4 +78,10 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 80px;
+    
+    @media (max-width: 768px) {
+        img {
+            max-height: 28px;
+        }
+    }
 }
